cabal-version:       2.2
name:                tog
version:             0.2.0
license:             BSD-3-Clause
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
build-type:          Simple
tested-with:         GHC == 8.6.5

library
  exposed-modules:     Tog.Abstract
                     , Tog.CheckFile
                     , Tog.Elaborate
                     , Tog.Error
                     , Tog.Instrumentation
                     , Tog.Main
                     , Tog.Monad
                     , Tog.Names
                     , Tog.Parse
                     , Tog.PrettyPrint
                     , Tog.Raw
                     , Tog.ScopeCheck
                     , Tog.Term
                     , Tog.TypeCheck
                     , Tog.Unify
                     -- new for 0.2.0
                     , Tog.Deriving.Utils
                     , Tog.Deriving.TGraph
                     , Tog.Deriving.TGraphTest
                     , Tog.Deriving.Hom
                     , Tog.Deriving.Main
                     , Tog.Deriving.EqTheory
                     , Tog.Deriving.TUtils
                     , Tog.Deriving.TypeConversions
                     , Tog.Deriving.TermLang
                     , Tog.Deriving.ProductTheory
                     , Tog.Deriving.Signature 
                     , Tog.Deriving.Types 
                     , Tog.Deriving.Lenses 
                     , Tog.Deriving.Debug
                     , Tog.Deriving.RelationalInterp
		     , Tog.Deriving.Utils.Bindings
		     , Tog.Deriving.Utils.Parameters
		     , Tog.Deriving.Utils.QualDecls
                     , Tog.Deriving.OpenTermLang
                     , Tog.Deriving.Utils.Renames
		     , Tog.Deriving.Evaluator
		     , Tog.Deriving.OpenTermEvaluator
		     , Tog.Deriving.TogPrelude
                     , Tog.Deriving.Utils.Functions
                     , Tog.Deriving.Simplifier   
                     
  other-modules:       Data.Collect
                     , Tog.Instrumentation.Conf
                     , Tog.Instrumentation.Debug
                     , Tog.Instrumentation.Timing
                     , Tog.Prelude
                     , Tog.Term.FreeVars
                     , Tog.Term.Impl
                     , Tog.Term.Impl.Common
                     , Tog.Term.Impl.GraphReduce
                     , Tog.Term.Impl.GraphReduceUnpack
                     , Tog.Term.Impl.Hashed
                     , Tog.Term.Impl.Simple
                     , Tog.Term.MetaVars
                     , Tog.Term.Pretty
                     , Tog.Term.Subst
                     , Tog.Term.Synonyms
                     , Tog.Term.Types
                     , Tog.Unify.Common
                     , Tog.Unify.Simple
                       -- BNFC stuff
                     , Tog.Raw.Abs
                     , Tog.Raw.ErrM
                     , Tog.Raw.Layout
                     , Tog.Raw.Lex
                     , Tog.Raw.Par
                     , Tog.Raw.Print
                     , Tog.DerivingInsts
                  --   , Tog.TGraphState 

  build-depends:       array >= 0.4
                     , base >= 4.6
                     , bifunctors >= 4.1.1.1
                     , boxes >= 0.1
                     , containers >= 0.5
                     , either >= 4.3.2
                     , hashable >= 1.2
                     , hashtables >= 1.1
                     , lens >= 4.4
                     , mtl >= 2.1
                     , nats >= 0.2
                     , optparse-applicative >= 0.11
                     , profunctors >= 4.3
                     , safe >= 0.3.8
                     , semigroups >= 0.15
                     , split >= 0.2
                     , syb >= 0.6
                     , tagged >= 0.7.2
                     , transformers >= 0.2
                     , transformers-compat >= 0.3
                     , unordered-containers >= 0.2.5
                     , wl-pprint >= 1.1
                     , BNFC >= 2.8

  hs-source-dirs:      src, bnfc
  include-dirs:        src
  default-language:    Haskell2010
  ghc-options:         -Wall -O
  ghc-prof-options:    -auto-all

  if os(darwin)
    c-sources: cbits/time-osx.c
  else {
    if os(windows)
      c-sources: cbits/time-windows.c
    else
      c-sources: cbits/time-posix.c
  }

  cc-options:          -fPIC

  build-tools:         alex, happy

  default-extensions:  BangPatterns
                     , DataKinds
                     , CPP
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax
  
executable tog
  main-is:             tog.hs
  build-depends:       base >= 4.6, syb >= 0.6, tog
  default-language:    Haskell2010
