cabal-version:       2.2
name:                tog
version:             0.2.0
license:             BSD-3-Clause
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
build-type:          Simple
tested-with:         GHC == 8.6.5

library
  exposed-modules:     Tog.Abstract
                     , Tog.CheckFile
                     , Tog.Elaborate
                     , Tog.Error
                     , Tog.Instrumentation
                     , Tog.Main
                     , Tog.Monad
                     , Tog.Names
                     , Tog.Parse
                     , Tog.PrettyPrint
                     , Tog.Raw
                     , Tog.ScopeCheck
                     , Tog.Term
                     , Tog.TypeCheck
                     , Tog.Unify
                     -- new for 0.2.0
                     , Tog.Deriving.Utils
                     , Tog.Deriving.TGraph
                     , Tog.Deriving.TGraphTest
                     , Tog.Deriving.Hom
                     , Tog.Deriving.Main
                     , Tog.Deriving.EqTheory
                     , Tog.Deriving.TUtils
                     , Tog.Deriving.TypeConversions
                     , Tog.Deriving.ProductTheory
                     , Tog.Deriving.Signature 
                     , Tog.Deriving.Types 
                     , Tog.Deriving.Lenses 
                     , Tog.Deriving.RelationalInterp
                     , Tog.Deriving.Utils.Bindings
                     , Tog.Deriving.Utils.Parameters
                     , Tog.Deriving.Utils.Renames
                     , Tog.Deriving.Evaluator
                     , Tog.Deriving.TogPrelude
                     , Tog.Deriving.Utils.Functions
                     , Tog.Deriving.Simplifier
                     , Tog.Deriving.Utils.Variables
                     , Tog.Deriving.Utils.Types
                     , Tog.Deriving.Tagless
                     , Tog.Deriving.Terms
                     , Tog.Deriving.Induction
                     , Tog.Deriving.StagedTerms
                     , Tog.Deriving.GenEverything
                     , Tog.Deriving.Print
                     , Tog.Exporting.Agda
                     , Tog.Exporting.AgdaPredStyle
                     , Tog.Exporting.Main
                     , Tog.Exporting.Agda.Preprocess
                     , Tog.Exporting.Config
                     , Tog.Exporting.Export
                     , Tog.Exporting.FormatOutput
                     , Tog.Exporting.Lean.Preprocess
                     , Tog.Exporting.Prelude
                     , Tog.Exporting.Utils
                     , Tog.Exporting.LeanPrelude
                      
                     
  other-modules:       Data.Collect
                     , Tog.Instrumentation.Conf
                     , Tog.Instrumentation.Debug
                     , Tog.Instrumentation.Timing
                     , Tog.Prelude
                     , Tog.Term.FreeVars
                     , Tog.Term.Impl
                     , Tog.Term.Impl.Common
                     , Tog.Term.Impl.GraphReduce
                     , Tog.Term.Impl.GraphReduceUnpack
                     , Tog.Term.Impl.Hashed
                     , Tog.Term.Impl.Simple
                     , Tog.Term.MetaVars
                     , Tog.Term.Pretty
                     , Tog.Term.Subst
                     , Tog.Term.Synonyms
                     , Tog.Term.Types
                     , Tog.Unify.Common
                     , Tog.Unify.Simple
                       -- BNFC stuff
                     , Tog.Raw.Abs
                     , Tog.Raw.ErrM
                     , Tog.Raw.Layout
                     , Tog.Raw.Lex
                     , Tog.Raw.Par
                     , Tog.Raw.Print
                     , Tog.DerivingInsts
                  --   , Tog.TGraphState 

  build-depends:       array >= 0.4
                     , base >= 4.6
                     , bifunctors >= 4.1.1.1
                     , boxes >= 0.1
                     , containers >= 0.5
                     , either >= 4.3.2
                     , hashable >= 1.2
                     , hashtables >= 1.1
                     , lens >= 4.4
                     , mtl >= 2.1
                     , nats >= 0.2
                     , optparse-applicative >= 0.11
                     , profunctors >= 4.3
                     , safe >= 0.3.8
                     , semigroups >= 0.15
                     , split >= 0.2
                     , syb >= 0.6
                     , tagged >= 0.7.2
                     , transformers >= 0.2
                     , transformers-compat >= 0.3
                     , unordered-containers >= 0.2.5
                     , wl-pprint >= 1.1
                     , BNFC >= 2.8
                     , directory >= 1.3.5.0
                     , timeit >= 2.0
                     , clock>=0.8
                     , formatting>=7.1.1
                     , deepseq>=1.4.4.0

  hs-source-dirs:      src, bnfc
  include-dirs:        src
  default-language:    Haskell2010
  ghc-options:         -Wall -O
  ghc-prof-options:    -auto-all

  if os(darwin)
    c-sources: cbits/time-osx.c
  else {
    if os(windows)
      c-sources: cbits/time-windows.c
    else
      c-sources: cbits/time-posix.c
  }

  cc-options:          -fPIC

  build-tool-depends:  alex:alex, happy:happy

  default-extensions:  BangPatterns
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax
  
executable tog
  main-is:             tog.hs
  build-depends:       base >= 4.6, syb >= 0.6, tog
  default-language:    Haskell2010

  ghc-options:         -Wall -O  -optP-Wno-nonportable-include-path

  default-extensions:  BangPatterns
                     , CPP 
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax

