cabal-version:       2.2
name:                tog
version:             0.2.0
license:             BSD-3-Clause
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
build-type:          Simple
tested-with:         GHC == 8.6.5

library
  exposed-modules:     Interpret.Main
                     , Tog.Abstract
                     , Tog.CheckFile
                     , Tog.Elaborate
                     , Tog.Error
                     , Tog.Instrumentation
                     , Tog.Monad
                     , Tog.Names
                     , Tog.Parse
                     , Tog.PrettyPrint
                     , Tog.Raw
                     , Tog.ScopeCheck
                     , Tog.Term
                     , Tog.TypeCheck
                     , Tog.Unify
                     , Tog.Print
                     , Interpret.Utils.TypeConversions                     
                     , Interpret.Utils.Utils
                     , Interpret.Utils.TUtils                    
                     , Interpret.Utils.Bindings
                     , Interpret.Utils.Parameters
                     , Interpret.Utils.Renames
                     , Interpret.Utils.Types
                     , Interpret.Utils.Functions
                     , Interpret.Utils.Lenses
                     , Interpret.Flattener.TGraph
                     , Interpret.Flattener.Main
                     , Interpret.Flattener.Types
                     , Interpret.Deriving.Hom
                     , Interpret.Deriving.Main
                     , Interpret.Deriving.EqTheory
                     , Interpret.Deriving.ProductTheory
                     , Interpret.Deriving.Signature 
                     , Interpret.Deriving.RelationalInterp
                     , Interpret.Deriving.Evaluator
                     , Interpret.Deriving.TogPrelude
                     , Interpret.Deriving.Simplifier
                     , Interpret.Deriving.Tagless
                     , Interpret.Deriving.Terms
                     , Interpret.Deriving.Induction
                     , Interpret.Deriving.StagedTerms
                     , Interpret.Deriving.GenEverything
                     , Interpret.Exporting.AgdaPredStyle
                     , Interpret.Exporting.Main
                     , Interpret.Exporting.Agda.Preprocess
                     , Interpret.Exporting.Config
                     , Interpret.Exporting.Export
                     , Interpret.Exporting.FormatOutput
                     , Interpret.Exporting.Lean.Preprocess
                     , Interpret.Exporting.Prelude
                     , Interpret.Exporting.Utils
                     , Interpret.Exporting.LeanPrelude
                      
                     
  other-modules:       Data.Collect
                     , Tog.Instrumentation.Conf
                     , Tog.Instrumentation.Debug
                     , Tog.Instrumentation.Timing
                     , Tog.Prelude
                     , Tog.Term.FreeVars
                     , Tog.Term.Impl
                     , Tog.Term.Impl.Common
                     , Tog.Term.Impl.GraphReduce
                     , Tog.Term.Impl.GraphReduceUnpack
                     , Tog.Term.Impl.Hashed
                     , Tog.Term.Impl.Simple
                     , Tog.Term.MetaVars
                     , Tog.Term.Pretty
                     , Tog.Term.Subst
                     , Tog.Term.Synonyms
                     , Tog.Term.Types
                     , Tog.Unify.Common
                     , Tog.Unify.Simple
                       -- BNFC stuff
                     , Tog.Raw.Abs
                     , Tog.Raw.ErrM
                     , Tog.Raw.Layout
                     , Tog.Raw.Lex
                     , Tog.Raw.Par
                     , Tog.Raw.Print
                     , Tog.DerivingInsts

  build-depends:       array >= 0.4
                     , base >= 4.6
                     , bifunctors >= 4.1.1.1
                     , boxes >= 0.1
                     , containers >= 0.5
                     , either >= 4.3.2
                     , hashable >= 1.2
                     , hashtables >= 1.1
                     , lens >= 4.4
                     , mtl >= 2.1
                     , nats >= 0.2
                     , optparse-applicative >= 0.11
                     , profunctors >= 4.3
                     , safe >= 0.3.8
                     , semigroups >= 0.15
                     , split >= 0.2
                     , syb >= 0.6
                     , tagged >= 0.7.2
                     , transformers >= 0.2
                     , transformers-compat >= 0.3
                     , unordered-containers >= 0.2.5
                     , wl-pprint >= 1.1
                     , BNFC >= 2.8
                     , directory >= 1.3.5.0
                     , timeit >= 2.0
                     , clock>=0.8
                     , formatting>=7.1.1
                     , deepseq>=1.4.4.0

  hs-source-dirs:      src, bnfc
  include-dirs:        src
  default-language:    Haskell2010
  ghc-options:         -Wall -O
  ghc-prof-options:    -auto-all

  if os(darwin)
    c-sources: cbits/time-osx.c
  else {
    if os(windows)
      c-sources: cbits/time-windows.c
    else
      c-sources: cbits/time-posix.c
  }

  cc-options:          -fPIC

  build-tool-depends:  alex:alex, happy:happy

  default-extensions:  BangPatterns
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax
  
executable tog
  main-is:             tog.hs
  build-depends:       base >= 4.6, syb >= 0.6, tog
  default-language:    Haskell2010

  ghc-options:         -Wall -O  -optP-Wno-nonportable-include-path

  default-extensions:  BangPatterns
                     , CPP 
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax

